# QRDS

./: .gitignore  ABRIR_QRDS.ps1  QRDS_START_HERE.md  README.md  data  docs  qrds_acceptance_runner.sh  qrds_acceptance_runner_serve.sh  qrds_archive_manifest_repo_hygiene.sh  qrds_archive_manifest_repo_hygiene_serve.sh  qrds_canonical_data_collection_dry_run.sh  qrds_canonical_data_collection_dry_run_serve.sh  qrds_canonical_data_source_adapter_dry_run.sh  qrds_canonical_data_source_adapter_dry_run_serve.sh  qrds_dashboard.sh  qrds_dashboard_app.sh  qrds_dashboard_charts.sh  qrds_dashboard_guide.sh  qrds_dashboard_hub.sh  qrds_dashboard_portal.sh  qrds_dashboard_refresh.sh  qrds_dashboard_serve.sh  qrds_dashboard_ui.sh  qrds_data_acquisition_depth_plan.sh  qrds_data_acquisition_depth_plan_from_stack_serve.sh  qrds_data_audit.sh  qrds_data_audit_from_stack_serve.sh  qrds_data_audit_serve.sh  qrds_data_collection_dry_run_serve.sh  qrds_data_coverage.sh  qrds_data_coverage_from_stack_serve.sh  qrds_data_coverage_serve.sh  qrds_data_gap_remediation.sh  qrds_data_gap_remediation_from_stack_serve.sh  qrds_data_gap_remediation_serve.sh  qrds_data_profile.sh  qrds_data_profile_from_stack_serve.sh  qrds_data_profile_serve.sh  qrds_data_quality.sh  qrds_data_quality_from_stack_serve.sh  (+243 more)
crypto_decision_lab/: .env.example  README.md  pyproject.toml  qrds_phase37_export_review_bundle_single_portal_index_serve.sh  qrds_phase38_portal_serve.sh  qrds_phase39_hotfix_verify_full_suite.sh  qrds_phase40_portal_serve.sh  qrds_phase40_verify.sh  qrds_phase43_verify.sh  qrds_phase47_verify.sh  (+41 more)
(+2120 files in other folders)
