[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_decision_lab"
version = "1.0.0"
description = "QRDS/QOS — Quant Research & Design Specification / Quant Operating System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.32",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
markers = [
    "safety: non-negotiable safety gate tests",
    "integration: tests that may call public HTTP endpoints",
    "regression: schema regression tests against approved sprint outputs",
]
